--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
     <div class="link-note">
         <small>
             
-            <a href="https://github.com/lizzyrowe1107/Weather-App" target="_blank"> Open-Source Code</a> 
-             by Liz Rowe
+            <a href="https://kinkinnaija.github.io/Weather-app/" target="_blank"> Open-Source Code</a> 
+             by Ujah Kings Fidel
         </small>
     </div>
         
